--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=GGJ25
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/ExampleMap.ExampleMap
+EditorStartupMap=/Game/Maps/PopUpBanditsMap.PopUpBanditsMap
 GameDefaultMap=/Game/Maps/ExampleMap.ExampleMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/PopUpBandits/BP_PopUpBanditsGamemode.BP_PopUpBanditsGamemode_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 
