--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=GGJ25
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/PopUpBanditsMap.PopUpBanditsMap
-GameDefaultMap=/Game/Maps/ExampleMap.ExampleMap
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -86,7 +86,7 @@ ManualIPAddress=
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
 HardwareCursors=()
-SoftwareCursors=((Default, "/Game/Blueprints/PopUpBandits/WBP_Cursor.WBP_Cursor_C"))
+SoftwareCursors=()
 ApplicationScale=1.000000
 UIScaleRule=ShortestSide
 CustomScalingRuleClass=None
