bomb defusal basically done (prototype)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Vertical
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/Blueprints/PopUpBandits/BP_PopUpBanditsGameMode_Child.BP_PopUpBanditsGameMode_Child_C
+GlobalDefaultGameMode=/Game/Blueprints/MilkUdders/BP_MilkUddersGamemode.BP_MilkUddersGamemode_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 
