--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Vertical
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/Blueprints/Paintball/BP_PaintballGamemode.BP_PaintballGamemode_C
+GlobalDefaultGameMode=/Game/Blueprints/BP_ExampleGameMode.BP_ExampleGameMode_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 
